--- a/package.json
+++ b/package.json
@@ -4,27 +4,17 @@
   "private": true,
   "scripts": {
     "start": "node node_modules/react-native/local-cli/cli.js start",
-    "test": "jest",
-    "precommit": "lint-staged"
-  },
-  "lint-staged": {
-    "*.{js, json}": [
-      "prettier --write",
-      "git add"
-    ]
+    "test": "jest"
   },
   "dependencies": {
-    "react": "16.4.1",
-    "react-native": "0.56.0"
+    "react": "16.6.0-alpha.8af6728",
+    "react-native": "0.57.4"
   },
   "devDependencies": {
-    "babel-jest": "23.2.0",
-    "babel-preset-react-native": "5.0.2",
-    "husky": "^0.14.3",
-    "jest": "23.3.0",
-    "lint-staged": "^7.2.0",
-    "prettier": "^1.13.7",
-    "react-test-renderer": "16.4.1"
+    "babel-jest": "23.6.0",
+    "jest": "23.6.0",
+    "metro-react-native-babel-preset": "0.48.1",
+    "react-test-renderer": "16.6.0-alpha.8af6728"
   },
   "jest": {
     "preset": "react-native"
