Updated .gitignore and README.md

--- a/.gitignore
+++ b/.gitignore
@@ -72,3 +72,8 @@ package-lock.json
 
 # ReactCommon subdir shouldn't have Xcode project
 /ReactCommon/**/*.xcodeproj
+
+# Enviroment files
+.env
+.env.development
+.env.production
