--- a/package.json
+++ b/package.json
@@ -26,11 +26,12 @@
   },
   "devDependencies": {
     "babel-jest": "23.6.0",
+    "babel-plugin-styled-components": "^1.8.0",
     "husky": "^1.1.2",
     "jest": "23.6.0",
-    "lint-staged": "^7.3.0",
+    "lint-staged": "^8.0.4",
     "metro-react-native-babel-preset": "0.48.1",
-    "prettier": "^1.14.3",
+    "prettier": "^1.15.2",
     "react-native-version": "^2.6.6",
     "react-test-renderer": "16.6.0-alpha.8af6728"
   },
