--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react": "16.6.0-alpha.8af6728",
     "react-native": "0.57.4",
     "react-native-config": "^0.11.5",
+    "react-navigation": "^2.18.2",
     "styled-components": "^4.0.3"
   },
   "devDependencies": {
