--- a/package.json
+++ b/package.json
@@ -22,8 +22,9 @@
     "react": "16.6.0-alpha.8af6728",
     "react-native": "0.57.4",
     "react-native-config": "^0.11.5",
+    "react-native-vector-icons": "^6.0.2",
     "react-navigation": "^2.18.2",
-    "styled-components": "^4.0.3"
+    "styled-components": "^4.1.0"
   },
   "devDependencies": {
     "babel-jest": "23.6.0",
