--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     }
   },
   "dependencies": {
+    "axios": "^0.18.0",
     "react": "16.6.0-alpha.8af6728",
     "react-native": "0.57.4",
     "react-native-config": "^0.11.5",
@@ -33,6 +34,7 @@
     "lint-staged": "^8.0.4",
     "metro-react-native-babel-preset": "0.49.0",
     "prettier": "^1.15.2",
+    "prop-types": "^15.6.2",
     "react-native-version": "^2.6.6",
     "react-test-renderer": "16.6.0-alpha.8af6728"
   },
