--- a/package.json
+++ b/package.json
@@ -20,24 +20,24 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
-    "react": "16.6.0-alpha.8af6728",
-    "react-native": "0.57.4",
-    "react-native-config": "^0.11.5",
+    "react": "16.6.1",
+    "react-native": "0.57.5",
+    "react-native-config": "^0.11.6",
     "react-native-paper": "^2.2.5",
-    "react-native-vector-icons": "^6.0.2",
+    "react-native-vector-icons": "^6.1.0",
     "react-navigation": "^2.18.2",
     "styled-components": "^4.1.0"
   },
   "devDependencies": {
     "babel-jest": "23.6.0",
-    "husky": "^1.1.2",
+    "husky": "^1.1.4",
     "jest": "23.6.0",
-    "lint-staged": "^8.0.4",
-    "metro-react-native-babel-preset": "0.49.0",
+    "lint-staged": "^8.0.5",
+    "metro-react-native-babel-preset": "0.49.2",
     "prettier": "^1.15.2",
     "prop-types": "^15.6.2",
     "react-native-version": "^2.6.6",
-    "react-test-renderer": "16.6.0-alpha.8af6728"
+    "react-test-renderer": "16.6.1"
   },
   "jest": {
     "preset": "react-native"
