--- a/package.json
+++ b/package.json
@@ -27,6 +27,10 @@
     "react-native-paper": "^2.2.8",
     "react-native-vector-icons": "^6.1.0",
     "react-navigation": "^2.18.2",
+    "react-redux": "^6.0.0",
+    "redux": "^4.0.1",
+    "redux-actions": "^2.6.4",
+    "redux-thunk": "^2.3.0",
     "styled-components": "^4.1.0"
   },
   "devDependencies": {
