--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
+    "flux-standard-action": "^2.0.3",
     "react": "16.6.1",
     "react-native": "0.57.5",
     "react-native-config": "^0.11.6",
