--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "flux-standard-action": "^2.0.3",
     "react": "16.6.1",
     "react-native": "0.57.5",
+    "react-native-animatable": "^1.3.1",
     "react-native-config": "^0.11.6",
     "react-native-paper": "^2.2.8",
     "react-native-vector-icons": "^6.1.0",
