--- a/package.json
+++ b/package.json
@@ -21,17 +21,23 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
+    "flux-standard-action": "^2.0.3",
     "react": "16.6.1",
     "react-native": "0.57.5",
+    "react-native-animatable": "^1.3.1",
     "react-native-config": "^0.11.6",
     "react-native-paper": "^2.2.8",
     "react-native-vector-icons": "^6.1.0",
     "react-navigation": "^2.18.2",
+    "react-redux": "^6.0.0",
+    "redux": "^4.0.1",
+    "redux-actions": "^2.6.4",
+    "redux-thunk": "^2.3.0",
     "styled-components": "^4.1.0"
   },
   "devDependencies": {
     "babel-jest": "23.6.0",
-    "husky": "^1.2.0",
+    "husky": "^1.3.1",
     "jest": "23.6.0",
     "lint-staged": "^8.1.0",
     "metro-react-native-babel-preset": "0.49.2",
