--- a/ios/stockrsi.xcodeproj/xcshareddata/xcschemes/stockrsi-tvOS.xcscheme
+++ b/ios/stockrsi.xcodeproj/xcshareddata/xcschemes/stockrsi-tvOS.xcscheme
@@ -5,15 +5,6 @@
    <BuildAction
       parallelizeBuildables = "NO"
       buildImplicitDependencies = "YES">
-      <PreActions>
-         <ExecutionAction
-            ActionType = "Xcode.IDEStandardExecutionActionsCore.ExecutionActionType.ShellScriptAction">
-            <ActionContent
-               title = "Run Script"
-               scriptText = "echo &quot;.env.production&quot; &gt; /tmp/envfile">
-            </ActionContent>
-         </ExecutionAction>
-      </PreActions>
       <BuildActionEntries>
          <BuildActionEntry
             buildForTesting = "YES"
@@ -23,9 +14,9 @@
             buildForAnalyzing = "YES">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "83CBBA2D1A601D0E00E9B192"
+               BlueprintIdentifier = "2D2A28121D9B038B00D4039D"
                BuildableName = "libReact.a"
-               BlueprintName = "React"
+               BlueprintName = "React-tvOS"
                ReferencedContainer = "container:../node_modules/react-native/React/React.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
@@ -37,10 +28,10 @@
             buildForAnalyzing = "YES">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-               BuildableName = "StockRSI.app"
-               BlueprintName = "StockRSI"
-               ReferencedContainer = "container:StockRSI.xcodeproj">
+               BlueprintIdentifier = "2D02E47A1E0B4A5D006451C7"
+               BuildableName = "stockrsi-tvOS.app"
+               BlueprintName = "stockrsi-tvOS"
+               ReferencedContainer = "container:stockrsi.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
          <BuildActionEntry
@@ -51,10 +42,10 @@
             buildForAnalyzing = "YES">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "00E356ED1AD99517003FC87E"
-               BuildableName = "StockRSITests.xctest"
-               BlueprintName = "StockRSITests"
-               ReferencedContainer = "container:StockRSI.xcodeproj">
+               BlueprintIdentifier = "2D02E48F1E0B4A5D006451C7"
+               BuildableName = "stockrsi-tvOSTests.xctest"
+               BlueprintName = "stockrsi-tvOSTests"
+               ReferencedContainer = "container:stockrsi.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
@@ -69,20 +60,20 @@
             skipped = "NO">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "00E356ED1AD99517003FC87E"
-               BuildableName = "StockRSITests.xctest"
-               BlueprintName = "StockRSITests"
-               ReferencedContainer = "container:StockRSI.xcodeproj">
+               BlueprintIdentifier = "2D02E48F1E0B4A5D006451C7"
+               BuildableName = "stockrsi-tvOSTests.xctest"
+               BlueprintName = "stockrsi-tvOSTests"
+               ReferencedContainer = "container:stockrsi.xcodeproj">
             </BuildableReference>
          </TestableReference>
       </Testables>
       <MacroExpansion>
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "StockRSI.app"
-            BlueprintName = "StockRSI"
-            ReferencedContainer = "container:StockRSI.xcodeproj">
+            BlueprintIdentifier = "2D02E47A1E0B4A5D006451C7"
+            BuildableName = "stockrsi-tvOS.app"
+            BlueprintName = "stockrsi-tvOS"
+            ReferencedContainer = "container:stockrsi.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
       <AdditionalOptions>
@@ -102,10 +93,10 @@
          runnableDebuggingMode = "0">
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "StockRSI.app"
-            BlueprintName = "StockRSI"
-            ReferencedContainer = "container:StockRSI.xcodeproj">
+            BlueprintIdentifier = "2D02E47A1E0B4A5D006451C7"
+            BuildableName = "stockrsi-tvOS.app"
+            BlueprintName = "stockrsi-tvOS"
+            ReferencedContainer = "container:stockrsi.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
       <AdditionalOptions>
@@ -121,10 +112,10 @@
          runnableDebuggingMode = "0">
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "StockRSI.app"
-            BlueprintName = "StockRSI"
-            ReferencedContainer = "container:StockRSI.xcodeproj">
+            BlueprintIdentifier = "2D02E47A1E0B4A5D006451C7"
+            BuildableName = "stockrsi-tvOS.app"
+            BlueprintName = "stockrsi-tvOS"
+            ReferencedContainer = "container:stockrsi.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </ProfileAction>
