--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
   "scripts": {
     "start": "node node_modules/react-native/local-cli/cli.js start",
     "test": "jest",
-    "postversion": "react-native-version",
-    "make-android-debug": "react-native bundle --platform android --dev false --entry-file index.js --bundle-output android/app/src/main/assets/index.android.bundle --assets-dest android/app/src/main/res && cd android/ && ./gradlew assembleDebug"
+    "postversion": "react-native-version"
   },
   "lint-staged": {
     "*.{js, json}": [
@@ -22,29 +21,33 @@
   "dependencies": {
     "axios": "^0.18.0",
     "flux-standard-action": "^2.0.3",
-    "react": "16.6.1",
-    "react-native": "0.57.5",
+    "react": "16.6.3",
+    "react-native": "0.58.5",
     "react-native-animatable": "^1.3.1",
-    "react-native-config": "^0.11.6",
-    "react-native-paper": "^2.2.8",
-    "react-native-vector-icons": "^6.1.0",
-    "react-navigation": "^2.18.2",
-    "react-redux": "^6.0.0",
+    "react-native-config": "^0.11.7",
+    "react-native-gesture-handler": "^1.0.16",
+    "react-native-paper": "^2.11.1",
+    "react-native-screens": "^1.0.0-alpha.22",
+    "react-native-vector-icons": "^6.3.0",
+    "react-navigation": "^3.3.0",
+    "react-navigation-header-buttons": "^2.1.2",
+    "react-redux": "^6.0.1",
     "redux": "^4.0.1",
     "redux-actions": "^2.6.4",
     "redux-thunk": "^2.3.0",
-    "styled-components": "^4.1.0"
+    "styled-components": "^4.1.3"
   },
   "devDependencies": {
-    "babel-jest": "23.6.0",
+    "babel-core": "7.0.0-bridge.0",
+    "babel-jest": "24.1.0",
     "husky": "^1.3.1",
-    "jest": "23.6.0",
-    "lint-staged": "^8.1.0",
-    "metro-react-native-babel-preset": "0.49.2",
-    "prettier": "^1.15.2",
-    "prop-types": "^15.6.2",
-    "react-native-version": "^2.6.6",
-    "react-test-renderer": "16.6.1"
+    "jest": "24.1.0",
+    "lint-staged": "^8.1.4",
+    "metro-react-native-babel-preset": "0.52.0",
+    "prettier": "^1.16.4",
+    "prop-types": "^15.7.2",
+    "react-native-version": "^2.6.7",
+    "react-test-renderer": "16.6.3"
   },
   "jest": {
     "preset": "react-native"
